--- a/css/menu.css
+++ b/css/menu.css
@@ -67,9 +67,7 @@
 }
 
 #sidebar-wrapper {
-
     left: unset;
-    z-index: 10;
     margin-left: -220px;
     overflow-y: auto;
     overflow-x: hidden;
